--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.4",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "crypto": "^1.0.1",
     "lucide-react": "^0.447.0",
     "mongoose": "^8.9.3",
     "next": "14.2.15",
+    "paystack": "^2.0.1",
+    "querystring": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.3",
