--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "querystring": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-spinner-toolkit": "^1.0.31",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.3",
