--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "country-list": "^2.3.0",
     "crypto": "^1.0.1",
     "embla-carousel-react": "^8.5.2",
     "express": "^4.21.2",
@@ -25,6 +26,7 @@
     "querystring": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-select": "^5.10.0",
     "react-spinner-toolkit": "^1.0.31",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
@@ -32,6 +34,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/country-list": "^2.1.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
